fix problem where the number of scripts passed a threshold, causing an overlap bug
git-svn-id: https://unicode.org/repos/unicodetools/trunk@846 13e8329f-0b23-4da4-9fe8-d0f6fe080806

--- a/unicodetools/data/charts/case/index_list.html
+++ b/unicodetools/data/charts/case/index_list.html
@@ -69,11 +69,11 @@ a.new {
 
 <a href = 'chart_Warang_Citi.html' title='Wara'>Warang_Citi</a><br>
 
-<a href = 'chart_Letter-Modifier.html' title='Lm' class='new'>Letter-Modifier</a><br>
-
-<a href = 'chart_Mark-Nonspacing.html' title='Mn'>Mark-Nonspacing</a><br>
+<a href = 'chart_Old_Hungarian.html' title='Hung' class='new'>Old_Hungarian</a><br>
 
 <a href = 'chart_NoCaseMapping.html' class='new'>NoCaseMapping</a><br>
+
+<a href = 'chart_Mark-Nonspacing.html' title='Mn'>Mark-Nonspacing</a><br>
 
 </p><hr width='50%'><p style='text-align: center;'>
 <a href='../collation/index.html' target='_top'>Collation&nbsp;Charts</a><br>
@@ -84,5 +84,5 @@ Case&nbsp;Charts<br>
 <a href='../nameslist/index.html' target='_top'>Names&nbsp;List&nbsp;Charts</a><br>
 </p><hr width='50%'><p style='font-size: 70%; text-align: center;'>
 UCD: 8.0.0
-<br>2015-05-27 [MS] <a href='http://www.macchiato.com/' target='_top'>MED</a>
+<br>2015-05-28 [MS] <a href='http://www.macchiato.com/' target='_top'>MED</a>
 </p></div></body></html>
