--- a/unicodetools/org/unicode/text/UCA/nameslist_help.html
+++ b/unicodetools/org/unicode/text/UCA/nameslist_help.html
@@ -32,7 +32,8 @@ th {
 	<ol>
 		<li>↑ Points to the uppercase form.</li>
 		<li>↓ Points to the lowercase form.</li>
-		<li>↕ Points to the titlecase form.</li>
+		<li>↕ Points to the titlecase form (where different from uppercase).</li>
+		<li>↔︎ Points to the casefold form (where different from lowercase).</li>
 	</ol>
 	</p>
 		<i>To properly view these charts, you need to have an updated
